--- a/A6_GMC/src/app/components/listView/listView.component.html
+++ b/A6_GMC/src/app/components/listView/listView.component.html
@@ -1,4 +1,5 @@
 <div class="container text-center">
+
     <div class="row row-cols-4">
         @for(user of usersArray; track user._id) {
         <div class="col">
@@ -6,6 +7,16 @@
         </div>
         }
     </div>
+
+    <div>
+        @if (actualPage > 1) {
+        <button class="btn btn-info" (click)="previousPage()">Anterior</button>
+        }
+        <button class="btn btn-info">Pagina {{actualPage}} de {{listView_total_pages}}</button>
+        @if (actualPage < listView_total_pages) { <button class="btn btn-info" (click)="nextPage()">Siguiente</button>
+            }
+    </div>
+
 </div>
 
 
