Alerts changed and icon buttons included

--- a/A6_GMC/src/app/app.component.html
+++ b/A6_GMC/src/app/app.component.html
@@ -1,16 +1,30 @@
 <header>
-    <div class="container">
-        <div class="flex-wrap">
-            <ul class="nav col-lg-6 ms-auto navbar-dark">
-                <li><a class="nav-link px-2 " routerLink="/home" routerLinkActive="active">Home</a></li>
-                <li><a class="nav-link px-2" routerLink="/newuser" routerLinkActive="active">Nuevo Usuario</a></li>
-            </ul>
+    <div class="container-fluid bg-dark">
+        <div class="container " style="max-width: 1100px;">
+            <div class="navbar bg-dark text-left">
+                <div class="col ">
+                    <img src="usersLogo.png" class="img-fluid" alt="" width="50px" />
+                    <a class="text-light px-2"> Usuarios</a>
+                </div>
+                <div class="col ">
+                    <nav class=" nav bg-dark" data-bs-theme=" dark">
+                        <ul class="nav ms-auto">
+
+                            <li><a class="nav-link px-2 " routerLink="/home" routerLinkActive="active">Home</a></li>
+                            <li><a class="nav-link px-2" routerLink="/newuser" routerLinkActive="active">Nuevo
+                                    Usuario</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
     </div>
 </header>
 
+
 <main>
-    <section class="container">
+    <section class="container-fluid bg-dark">
 
 
 
