--- a/A6_GMC/src/app/components/user-form/user-form.component.html
+++ b/A6_GMC/src/app/components/user-form/user-form.component.html
@@ -1,14 +1,15 @@
 <section class="container mt-3">
     <div class="card shadow p-5">
 
-        <h3>{{tipoFormulario}} usuario</h3>
+        <h3>{{formType}} usuario</h3>
         <hr>
-        <form [formGroup]="userForm " (ngSubmit)="getDataForm()">
+        <form [formGroup]="userForm" (ngSubmit)="getDataForm()" novalidate>
 
             <div class="mb-3">
                 <label for="first_name" class="form-label">First name</label>
                 <input id="first_name" type="text" class="form-control" formControlName="first_name"
                     autocomplete="name">
+
             </div>
             <div class="mb-3">
                 <label for="last_name" class="form-label">Last name</label>
@@ -19,10 +20,14 @@
                 <input id="email" type="email" class="form-control" formControlName="email" autocomplete="email">
             </div>
             <div class="mb-3">
-                <label for="image" class="form-label">Image</label>
+                <label for="image" class="form-label">Image URL</label>
                 <input id="image" type="text" class="form-control" formControlName="image" autocomplete="url">
+                @if (userForm.get('image')?.hasError('required') && userForm.get('image')?.touched) {
+                <small class="text-danger">Solo se admiten imagenes de tipo: https://i.pravatar.cc/500?u=...</small>
+                }
             </div>
-            <button type="submit" class="btn btn-primary">{{tipoFormulario}}</button>
+
+            <button type="submit" class="btn btn-primary" [disabled]="!userForm.valid">{{formType}}</button>
         </form>
 
     </div>
