--- a/A6_GMC/src/app/components/listView/user-card/user-card.component.html
+++ b/A6_GMC/src/app/components/listView/user-card/user-card.component.html
@@ -1,8 +1,8 @@
-<div class="card mx-auto bg-dark" style="width: 16rem;">
+<div class="card mx-auto card_colors border-0" style="width: 16rem;">
     <div class="d-flex justify-content-center align-items-center pt-2" style="height: 14rem;">
         <img src="{{user?.image}}" class=" w-75 rounded-circle" alt="">
     </div>
-    <div class="card-body bg-dark text-light" style="height: 4rem;">
+    <div class="card-body card_name_colors" style="height: 4rem;">
         <h6 class="card-title">{{user?.first_name}} {{user?.last_name}}</h6>
     </div>
 
