--- a/A6_GMC/src/app/app.component.css
+++ b/A6_GMC/src/app/app.component.css
@@ -1,4 +1,24 @@
+:host {
+    display: block;
+    min-height: 100vh;
+    background-color: var(--color-main-background);
+}
+
+.bg_color {
+    background-color: var(--color-main-background);
+}
+
+a {
+    color: var(--color-link);
+    font-weight: bold;
+}
+
+a:hover {
+    color: var(--color-active-link);
+
+}
+
 .active {
     color: var(--color-active-link);
-    font-weight: bold;
+
 }
