--- a/A6_GMC/src/app/components/user-form/user-form.component.css
+++ b/A6_GMC/src/app/components/user-form/user-form.component.css
@@ -1,3 +1,15 @@
+.bg_color {
+    background-color: var(--color-form-background);
+    color: var(--color-form-text)
+}
+
+.bg_color_input {
+    background-color: var(--color-form-inputs);
+    color: black;
+}
+
 input.ng-invalid.ng-touched {
-    border-color: red;
+
+    border: 3px solid red;
+
 }
