--- a/A6_GMC/src/app/components/user-view/user-view.component.html
+++ b/A6_GMC/src/app/components/user-view/user-view.component.html
@@ -1,79 +1,27 @@
-<section class="container bg-dark-subtle mt-5">
+<section class="container mt-5">
     <div class="row pt-5 mx-auto mb-5">
-        <div class="card shadow" style="max-width:600px">
+        <div class="card shadow bg_color p-0 border-0 w-auto">
             <div class="d-flex pt-5 ">
                 <div class="p-4 mr=2" style="width: 200px">
                     <img src="{{user?.image}}" class="w-100 rounded-circle" alt="...">
                 </div>
-                <div class="card-body pt-5 px-4 " style="width:340px">
+                <div class="card-body pt-5 px-4 w-auto">
                     <h4 class="card-title">{{user?.first_name}} {{user?.last_name}}</h4>
                     <p class="card-text"><strong>Username:</strong> {{user?.username}}</p>
                     <p class="password"><strong>Password:</strong> {{user?.password}}</p>
                 </div>
             </div>
-            <div class="d-flex  pt-4 justify-content-center">
-                <p class="Card-text"><strong>Email</strong> {{user?.email}}</p>
+            <div class="d-flex  pt-4 justify-content-center email_color">
+                <p class="Card-text"><strong>Email:</strong> {{user?.email}}</p>
             </div>
 
-            <div class="d-flex pt-5 pb-2 gap-2 px-1 justify-content-center">
+            <div class="d-flex p-4 gap-2 justify-content-center">
 
-                <button class="btn btn-info" (click)="delete(user?._id ?? '')">Eliminar</button>
-                <a class="btn btn-info" [routerLink]="['/updateuser', user?._id]">Actualizar</a>
-                <a class="btn btn-info" [routerLink]="['/home', user?._id]">Volver al listado</a>
+                <button class="btt " (click)="delete(user?._id ?? '')">Eliminar</button>
+                <a class="btt " [routerLink]="['/updateuser', user?._id]">Actualizar</a>
+                <a class="btt " [routerLink]="['/home', user?._id]">Volver al listado</a>
             </div>
 
         </div>
     </div>
 </section>
-
-
-<!-- <section class="container">
-    <div class="row justify-content-center pt-5 ">
-        <div class="card shadow" style="max-width:600px">
-            <div class="d-flex pt-5 ">
-                <div class="p-4 mr=2" style="width: 200px">
-                    <img src="{{user?.image}}" class="w-100 rounded-circle" alt="...">
-                </div>
-                <div class="card-body pt-5 px-4 " style="width:340px">
-                    <h4 class="card-title">{{user?.first_name}} {{user?.last_name}}</h4>
-                    <p class="card-text"><strong>Username:</strong> {{user?.username}}</p>
-                    <p class="password"><strong>Password:</strong> {{user?.password}}</p>
-                </div>
-            </div>
-            <div class="d-flex  pt-4 justify-content-center">
-                <p class="Card-text"><strong>Email</strong> {{user?.email}}</p>
-            </div>
-
-            <div class="d-flex pt-5 pb-2 gap-2 px-1 justify-content-center">
-
-                <button class="btn btn-info" (click)="delete(user?._id ?? '')">Eliminar</button>
-                <a class="btn btn-info" [routerLink]="['/updateuser', user?._id]">Actualizar</a>
-                <a class="btn btn-info" [routerLink]="['/home', user?._id]">Volver al listado</a>
-            </div>
-
-        </div>
-    </div>
-</section> -->
-
-<!-- <div class="container pt-5">
-    <div class="card mx-auto border-0" style="max-width: 800px;">
-        <div class="row g-0">
-            <div class="col-md-5 d-flex justify-content-center align-items-center bg-primary">
-                <img src="{{user?.image}}" class="img-fluid rounded-circle" alt="..." style="width: 65%; ">
-            </div>
-            <div class="col-md-7">
-                <div class="card-body ">
-                    <h2 class="card-title">Nombre del usuario</h2>
-                    <h2 class="card-subtitle mb-2 text-muted">Apellido del usuario</h2>
-                    <p class="card-text mb-0">Nombre Usuario: username</p>
-                    <p class="card-text">Email: emailom</p>
-                    <div class="d-flex flex-row flex-wrap mt-4">
-                        <button class="btn btn-danger me-2 mb-2">Eliminar</button>
-                        <button class="btn btn-primary me-2 mb-2">Actualizar</button>
-                        <button class="btn btn-secondary mb-2">Volver a listado</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
